# openbiodiv-ichatbio-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: __init__.py  __main__.py  agent.py  agent_card.py  client.py  main.py  openbiodiv_agent.py  openbiodiv_client.py
tests/: test_agent.py
